[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/UI/TradeUI.gd" type="Script" id=1]

[node name="TradeUI" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 40.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 100
custom_constants/margin_top = 100
custom_constants/margin_left = 100
custom_constants/margin_bottom = 100
script = ExtResource( 1 )

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_left = 100.0
margin_top = 100.0
margin_right = 1860.0
margin_bottom = 1020.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1753.0
margin_bottom = 913.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 40
custom_constants/margin_top = 40
custom_constants/margin_left = 40
custom_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
margin_left = 40.0
margin_top = 40.0
margin_right = 1706.0
margin_bottom = 866.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_right = 1666.0
margin_bottom = 772.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="shop" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 831.0
margin_bottom = 772.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="ShopList" type="ItemList" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/shop"]
margin_left = 10.0
margin_top = 10.0
margin_right = 821.0
margin_bottom = 762.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="inven" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 835.0
margin_right = 1666.0
margin_bottom = 772.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="InventoryList" type="ItemList" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/inven"]
margin_left = 10.0
margin_top = 10.0
margin_right = 821.0
margin_bottom = 762.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 776.0
margin_right = 1666.0
margin_bottom = 826.0
text = "Exit"

[connection signal="item_activated" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/shop/ShopList" to="." method="_on_ShopList_item_activated"]
[connection signal="item_activated" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/inven/InventoryList" to="." method="_on_InventoryList_item_activated"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Button" to="." method="_on_Button_pressed"]
